--- a/css/index.css
+++ b/css/index.css
@@ -18,8 +18,8 @@ h2
 p
 {
     color:darkseagreen;
-    text-align: center;
-    font-size: 30px;
+    text-align: left;
+    font-size: 20px;
 }
 .text 
 {
@@ -35,12 +35,55 @@ p
     width:120px;
     height:auto;
     padding:10px;
-    background-color:lightpink;
-    border-radius:10px;
+    background-color:lightgoldenrodyellow;
+    border-radius:5px;
     box-shadow: 4px 4px 10px rgba(0,0,0,0.4);
     pointer-events:none;
 }
-#barchart svg
+#barchart3 svg
 {
-    background-color:lightgrey;
+    background-color:lightyellow;
 }
+#barchartt svg
+{
+    background-color:lightcyan;
+}
+#barchart2 svg
+{
+    background-color:lightsteelblue;
+}
+#Places
+{
+    text-align: center;
+    font-size: 20px;
+    color: dodgerblue;
+}
+
+
+#tooltiP 
+{
+    position:absolute;
+    width:120px;
+    height:auto;
+    padding:10px;
+    background-color:lightcoral;
+    border-radius:5px;
+    box-shadow: 4px 4px 10px rgba(0,0,0,0.4);
+    pointer-events:none;
+}
+#tooltippp.hidden3
+{
+    display:none;
+}
+#tooltippp
+{
+    position:absolute;
+    width:100px;
+    height:auto;
+    padding:5px;
+    background-color:darkseagreen;
+    border-radius:5px;
+    box-shadow: 4px 4px 10px rgba(0,0,0,0.4);
+    pointer-events:none;
+}
+
